--- a/Client/src/app/my-account/my-voucher/my-voucher.component.html
+++ b/Client/src/app/my-account/my-voucher/my-voucher.component.html
@@ -10,8 +10,8 @@
             <img src="../assets/img/logo.jpg" alt="">
         </div>
         <div class="discount">
-            <h5>{{v.Name}}</h5>
-            <span>{{v.Category}}</span><br>
+            <h5>{{v.Code}}</h5>
+            <span>{{v.Name}}</span><br>
             <span style="font-size:15px">{{v.Condition}}</span>
             <hr>
             <span>HSD: {{v.ExpireDate | date:'dd/MM/yyyy'}}</span><br>
