--- a/Client/src/app/my-account/my-address/my-address.component.html
+++ b/Client/src/app/my-account/my-address/my-address.component.html
@@ -1,25 +1,28 @@
-<div *ngIf="!showEdit">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<div *ngIf="!showAddAddress &&!showEditAddress">
   <div class="title">Địa chỉ của tôi</div>
 <div class="main-sub">
-  <div class="shadow-sm p-3 mb-5 bg-body rounded" *ngIf="user">
-    <div class="container" *ngFor="let address of user.User.Address">
+  <div class="shadow-sm p-3 mb-5 bg-body rounded" *ngIf="addresses">
+    <div class="container" *ngFor="let address of addresses">
       <div class="row" >
         <div class="col-1 mt-0 p-0">
-          <input class="form-check-input" type="radio" checked name="inlineRadioOptions" id="inlineRadio1" [checked]="address.AddressType === 'Default'" (change)="setDefaultAddress()">
+          <input class="form-check-input" type="radio" checked name="inlineRadioOptions" id="inlineRadio1" [checked]="address.AddressType === 'Default'" (change)="CheckDefaultAddress()">
         </div>
         <div class="col-8">
           <span class="name">{{address.AddressName}}</span> | {{address.AddressPhone}} | <span class="def">{{address.AddressType ? 'Mặc định' : ''}}</span> <br>
           {{address.DetailAddress}}, {{address.Ward}}, {{address.Town}}, {{address.City}}
         </div>
         <div class="col-3">
-          <button class="btn btn-link" (click)="showEditProfile()">Cập nhật</button> <span style="color:#E75C6B">|</span>
-          <button class="btn btn-link">Xoá</button>
+          <button class="btn btn-link" (click)="showAddressEdit()">Cập nhật</button> <span style="color:#E75C6B">|</span>
+          <button class="btn btn-link" (click)="deleteAddress(address._id)">Xoá</button>
         </div>
       </div>
       <hr>
     </div>
     <div>
-      <button type="modal-button" class="btn btn-primary input_add main-input" (click)="showEditProfile()">
+      <button type="modal-button" class="btn btn-primary input_add main-input" (click)="showAddressNew()">
         <i class="fa-solid fa-plus"></i>
         <span>Thêm địa chỉ mới</span>
     </button>
@@ -27,6 +30,117 @@
   </div>
 </div>
 </div>
-<div *ngIf="showEdit">
-  Hello
+
+<div *ngIf="showAddAddress" class="modal">
+  <div class="address-new">
+    <div class="title">Địa chỉ mới</div>
+    <p>Để đặt hàng, vui lòng thêm địa chỉ nhận hàng</p>
+    <div class="information">
+      <form >
+        <div class="form__row form__row1">
+          <input type="text" class="form-control" name="fname" id="fname" placeholder="Họ và tên" required  [(ngModel)]="address.AddressName">
+          <input type="text"class="form-control" name="phone" id="phone" placeholder="Số điện thoại" required  [(ngModel)]="address.AddressPhone">
+        </div>
+
+        <!-- Dòng 2 -->
+        <div class="form__row form__row2">
+          <div class="col">
+            <select id="city" class="form-select form-select-sm mb-3" required  [(ngModel)]="address.City" name="city" (change)="onCityChange()">
+              <option value="">Chọn tỉnh/thành phố</option>
+              <option *ngFor="let city of cities" [value]="city.Name">{{ city.Name }}</option>
+            </select>
+        </div>
+
+        <div class="col">
+          <select class="form-select form-select-sm mb-3" id="district" required  [(ngModel)]="address.Town" name="district" (change)="onDistrictChange()">
+            <option value="">Chọn quận/huyện</option>
+            <option *ngFor="let district of districts" [value]="district.Name">{{ district.Name }}</option>
+          </select>
+        </div>
+
+        <div class="col">
+          <select class="form-select form-select-sm mb-3" id="ward" [(ngModel)]="address.Ward" name="ward" >
+            <option value="">Chọn phường/ xã</option>
+            <option *ngFor="let w of Wards" [value]="w.Name">{{ w.Name }}</option>
+          </select>
+        </div>
+        </div>
+
+        <!-- Dòng 3 -->
+        <div class="col">
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="DetailAddress" placeholder="Địa chỉ cụ thể" [(ngModel)]="address.DetailAddress" ></textarea>
+        </div>
+
+        <div class="button">
+          <button type="button" class="btn btn-primary input" (click)="closeAddressNew()">
+                  Trở lại
+          </button>
+          <button type="button" class="btn btn-primary input" (click)="postAddress()">
+            Hoàn thành
+        </button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
+
+
+
+<div *ngIf="showEditAddress" class="modal">
+  <div class="address-new">
+    <div class="title">Cập nhật địa chỉ</div>
+    <p>Để đặt hàng, vui lòng thêm địa chỉ nhận hàng</p>
+    <div class="information">
+      <form >
+        <div class="form__row form__row1">
+          <input type="text" class="form-control" name="fname" id="fname" placeholder="Họ và tên" required  [(ngModel)]="selectedAddress.AddressName">
+          <input type="text"class="form-control" name="phone" id="phone" placeholder="Số điện thoại" required  [(ngModel)]="selectedAddress.AddressPhone">
+        </div>
+
+        <!-- Dòng 2 -->
+        <div class="form__row form__row2">
+          <div class="col">
+            <select id="city" class="form-select form-select-sm mb-3" required  [(ngModel)]="selectedAddress.City" name="city" (change)="onCityChange()">
+              <option value="">Chọn tỉnh/thành phố</option>
+              <option *ngFor="let city of cities" [value]="city.Name">{{ city.Name }}</option>
+            </select>
+        </div>
+
+        <div class="col">
+          <select class="form-select form-select-sm mb-3" id="district" required  [(ngModel)]="selectedAddress.Town" name="district" (change)="onDistrictChange()">
+            <option value="">Chọn quận/huyện</option>
+            <option *ngFor="let district of districts" [value]="district.Name">{{ district.Name }}</option>
+          </select>
+        </div>
+
+        <div class="col">
+          <select class="form-select form-select-sm mb-3" id="ward" [(ngModel)]="selectedAddress.Ward" name="ward" >
+            <option value="">Chọn phường/ xã</option>
+            <option *ngFor="let w of Wards" [value]="w.Name">{{ w.Name }}</option>
+          </select>
+        </div>
+        </div>
+
+        <!-- Dòng 3 -->
+        <div class="col">
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="DetailAddress" placeholder="Địa chỉ cụ thể" [(ngModel)]="selectedAddress.DetailAddress" ></textarea>
+        </div>
+
+        <div class="button">
+          <a href="#">
+              <button type="button" class="btn btn-primary input">
+                  Trở lại
+              </button>
+          </a>
+          <button type="button" class="btn btn-primary input" (click)="putAddress()">
+            Hoàn thành
+        </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+
+
+</div>
+
