--- a/Client/src/app/my-account/my-address/my-address.component.css
+++ b/Client/src/app/my-account/my-address/my-address.component.css
@@ -62,6 +62,61 @@
   color: #E75C6B;
   text-decoration: none;
 }
-.btn-link:hover {
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.address-new {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  width: 50%;
+  height: auto;
+  overflow-y: auto;
+}
+.col input, select {
+  border: 1px solid var(--hover);
+  border-radius: 20px;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  height: 40px;
+  vertical-align: middle;
+  outline: none;
+}
+.form__row {
+  padding: 10px;
+}
 
+.form__row1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+}
+.form__row2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.form__row3 {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+input:focus, select:focus {
+  border: 1px solid var(--primary_color);
+}
+#fname {
+  margin-right: 25px;
+}
+#phone {
+  margin-left: 25px;
+  padding-right: 0;
 }
