linh ta linh tinh

--- a/Client/src/app/cart/cart.component.html
+++ b/Client/src/app/cart/cart.component.html
@@ -144,8 +144,8 @@
           </div>
 
           <div class="button_right">
-              <a href="./checkout">
-                  <button type="button" class="btn btn-primary input">
+              <a href="./checkout" >
+                  <button type="button" class="btn btn-primary input" (click)="postCart()">
                       Đặt hàng
                   </button>
               </a>
