--- a/Admin/src/app/chi-tiet-don-hang/chi-tiet-don-hang.component.css
+++ b/Admin/src/app/chi-tiet-don-hang/chi-tiet-don-hang.component.css
@@ -1,17 +1,18 @@
-
-
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 @import url('https://fonts.googleapis.com/css?family=Inter:400,800');
-h2{
+
+h2 {
   color: #E75C6B;
   font-family: 'Montserrat', sans-serif;
 }
-.donhang-container{
+
+.donhang-container {
   padding: 0;
   margin: 0 100px 0 100px;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
+
 :root {
   --primary_color: #E75C6B;
   --color_button: #F38A95;
@@ -19,9 +20,10 @@ h2{
   --button: #F38A95;
   --button_hover: #81C6E8;
 }
+
 .donhang-header {
   display: grid;
-  grid-template-columns: 3fr 2fr 2fr 1.5fr ;
+  grid-template-columns: 3fr 2fr 2fr 1.5fr;
   text-align: center;
   align-items: center;
   font-weight: bold;
@@ -30,6 +32,7 @@ h2{
   background-color: #E75C6B;
   color: white;
 }
+
 .donhang-product {
   display: grid;
   grid-template-columns: 3fr 2fr 2fr 1.5fr;
@@ -39,36 +42,38 @@ h2{
   font-size: 20px;
   font-family: 'Inter', sans-serif;
   word-spacing: 2px;
-  /* margin: 5% 2%; */
+  padding: 10px 0;
 }
 
-.donhang-info {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  align-items: center;
-}
+.donhang-info {}
+
 .product-description {
   text-align: left;
   padding-left: 10%;
 }
+
 .price-info {
-  display: grid;
-  grid-template-columns: 1.5fr 1.5fr;
+  /* display: grid;
+  grid-template-columns: 1.5fr 1.5fr; */
 }
+
 .price {
-  text-align: right;
+  /* text-align: right; */
   /* margin-right: 25%; */
 }
+
 .currency {
   text-align: left;
   margin-left: 20px;
 }
+
 .quantity-box {
   display: flex;
   justify-content: center;
   text-align: center;
 }
-.left{
+
+.left {
   float: left;
   width: 60%;
   justify-content: center;
@@ -78,46 +83,67 @@ h2{
   font-family: 'Inter', sans-serif;
 
 }
-.tongtien{
-  border: solid black 1px;
-  margin: auto;
-  border-radius: 20px;
-  margin-top: 30px;
-  box-shadow: 5px 5px rgb(217, 211, 211)
-}
-.right{
 
-  font-size: 20px;
-  font-family: 'Inter', sans-serif;
-}
-.bangright{
-  border: solid black 1px;
+.tongtien {
+  width: 90%;
   border-radius: 20px;
-  box-shadow: 5px 5px rgb(217, 211, 211)
 }
-button{
-  width: 110px;
-  height: 50px;
+
+.container {
+  width: 86%;
+  display: flex;
+}
+
+.right {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+
+.right textarea {
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px 0;
+  height: 150px;
+}
+
+.btn-container {
+  display: flex;
+}
+
+.button,
+.cancel-button {
   text-align: right;
   margin-right: 10px;
-  background-color:  #E75C6B;
-    color: white;
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 20px;
+  height: 60px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+  padding: 10px 20px;
 }
-.btn{
+
+.button {
+  background-color: #E75C6B;
+  color: #fff;
+}
+
+.cancel-button {
+  background-color: rgb(232, 220, 220);
+  color: #000;
+}
+
+.btn {
   padding-top: 20px;
 
   width: 300px;
   float: right;
 }
-table{
-  border-spacing:10px;
-}
 
+table {
+  border-spacing: 10px;
+}
