--- a/Admin/src/app/chi-tiet-don-hang/chi-tiet-don-hang.component.html
+++ b/Admin/src/app/chi-tiet-don-hang/chi-tiet-don-hang.component.html
@@ -1,175 +1,82 @@
-<h2>Chi tiết đơn hàng #SO100001</h2><hr>
+<h2>Chi tiết đơn hàng {{orderDetail ? orderDetail._id : ''}}</h2>
+<hr>
 <div class="donhang-container">
   <div class="line"></div>
   <div class="donhang-info-container">
     <div class="donhang-header">
-        <div>Sản phẩm</div>
-        <div>Đơn giá</div>
-        <div>Số lượng</div>
-        <div>Thành tiền</div>
+      <div>Sản phẩm</div>
+      <div>Đơn giá</div>
+      <div>Số lượng</div>
+      <div>Thành tiền</div>
     </div>
     <div class="line"></div>
     <div class="cart-product-container">
-      <div class="donhang-product">
-          <!-- Tên sản phẩm -->
-          <div class="donhang-info">
-              <div>
-                  <img src="assets/Vidau).jpg"width="100px" height="100px" style="border-radius: 50%">
-              </div>
-              <div class="product-description">
-                  <b>Donut Chocolate</b>
-              </div>
-          </div>
-          <!-- Giá sản phẩm -->
-          <div class="price-info">
-              <div class="price">30.000</div>
-              <div class="currency">
-                  VNĐ
-              </div>
-          </div>
-          <!-- Số lượng -->
-          <div class="quantity-box">2
+      <div *ngFor="let or of orderDetail?.Details" class="donhang-product">
+        <div class="donhang-info">
+          <b>{{or.ProductName}}</b>
         </div>
-
-          <!-- Thành tiền -->
-          <div class="price-info">
-              <div class="price">60.000</div>
-              <div class="currency">
-                  VNĐ
-              </div>
-          </div>
-      </div>
-
-      <div class="donhang-product">
-          <!-- Tên sản phẩm -->
-          <div class="donhang-info">
-              <div>
-                  <img style="border-radius:50%" src="assets/pumkincupcake.jpg" width="100px" height="100px">
-              </div>
-              <div class="product-description">
-                  <b>Pumkin Cupcake</b>
-              </div>
-          </div>
-          <!-- Giá sản phẩm -->
-          <div class="price-info">
-              <div class="price">
-                  45.000
-              </div>
-              <div class="currency">
-                  VNĐ
-              </div>
-          </div>
-          <!-- Số lượng -->
-          <div class="quantity-box">1
+        <div class="price-info">
+          <div class="price">{{convertVND(+or.UnitPrice)}}</div>
         </div>
-
-          <!-- Thành tiền -->
-          <div class="price-info">
-              <div class="price">
-                  45.000
-              </div>
-              <div class="currency">
-                  VNĐ
-              </div>
-          </div>
-      </div>
-
-      <div class="donhang-product">
-          <!-- Tên sản phẩm -->
-          <div class="donhang-info">
-              <div>
-                  <img src="assets/Bánh kem Tasty Love.jpg" width="100px" height="100px" style="border-radius: 50%">
-              </div>
-              <div class="product-description">
-                  <b>Bánh kem Tasty Love</b>
-              </div>
-          </div>
-          <!-- Giá sản phẩm -->
-          <div class="price-info">
-              <div class="price">
-                  320.000
-              </div>
-              <div class="currency">
-                  VNĐ
-              </div>
-          </div>
-          <!-- Số lượng -->
-          <div class="quantity-box">1
+        <div class="quantity-box">
+          {{or.Quantity}}
         </div>
-
-          <!-- Thành tiền -->
-          <div class="price-info">
-              <div class="price">
-                  320.000
-              </div>
-              <div class="currency">
-                  VNĐ
-              </div>
+        <div class="price-info">
+          <div class="price">
+            {{convertVND(+or.UnitPrice * +or.Quantity)}}
           </div>
+        </div>
       </div>
+    </div>
+    <hr>
   </div>
-  <hr>
 </div>
-</div>
-<div class="main-container">
-<div class="left">
-  <table class="tongtien">
-    <tr>
-      <td>Tổng giá trị sản phẩm</td>
-      <td><strong>425.000 VNĐ</strong></td>
-    </tr>
-    <tr>
-      <td>Vận chuyển</td>
-      <td><strong>20.000 VNĐ</strong></td>
-    </tr>
-    <tr>
-      <td>Giảm giá</td>
-      <td><strong>20.000 VNĐ</strong></td>
-    </tr>
-    <tr>
-      <td>Thành tiền</td>
-      <td style="color: red;"><strong>425.000 VNĐ</strong></td>
-    </tr>
-    <hr style="width: 100%;">
-    <tr>
-      <td>Số tiền đã thanh toán</td>
-      <td><strong>425.000 VNĐ</strong></td>
-    </tr>
-    <tr>
-      <td> Số tiền còn nợ </td>
-      <td><strong>20.000 VNĐ</strong></td>
-    </tr>
-  </table>
-</div>
-<div class="right">
-  <table class="bangright">
-    <tr>
-      <td><strong>Chờ xác nhận</strong></td>
-      <td><button>Xác nhận</button></td>
-      <td><button>Hủy</button></td>
-    </tr>
-    <tr>
-      <td><strong>Chờ đóng gói</strong></td>
-      <td><button>Hoàn tất</button></td>
-
-    </tr>
-    <tr>
-      <td><strong>Chờ giao hàng</strong></td>
-      <td><button>Hoàn tất</button></td>
-    </tr>
-    <tr>
-      <td><strong>Đã giao hàng</strong></td>
-      <td><button>Hoàn tất</button></td>
-    </tr>
-    <tr>
-      <td><strong>Đã hủy</strong></td>
-      <td><button>Hoàn tất</button></td>
-    </tr>
-  </table>
-</div>
-</div>
-
-<div class="btn">
-  <button>Lưu</button>
-
+<div class="container">
+  <div class="left">
+    <table class="tongtien">
+      <tr>
+        <td style="text-align: left;">Phương thức thanh toán</td>
+        <td style="text-align: right;"><strong>{{orderDetail ? orderDetail.PaymentMethod == 0 ? 'Thanh toán khi nhận hàng' : 'Chuyển khoản' : ''}}</strong></td>
+      </tr>
+      <tr>
+        <td style="text-align: left;">Tổng giá trị sản phẩm</td>
+        <td style="text-align: right;"><strong>{{convertVND(sumPriceOfProduct)}}</strong></td>
+      </tr>
+      <tr>
+        <td style="text-align: left;">Phí vận chuyển</td>
+        <td style="text-align: right;"><strong>{{convertVND(orderDetail ? +orderDetail.CostShip : 0)}}</strong></td>
+      </tr>
+      <tr>
+        <td style="text-align: left;">Giảm giá</td>
+        <td style="text-align: right;"><strong>0 VND</strong></td>
+      </tr>
+      <tr>
+        <td style="text-align: left;">Thành tiền</td>
+        <td style="color: red; text-align: right;"><strong>{{total()}}</strong></td>
+      </tr>
+      <hr style="width: 100%;">
+      <tr>
+        <td style="text-align: left;">Số tiền đã thanh toán</td>
+        <td style="text-align: right;"><strong>{{finalAmountPaid}}</strong></td>
+      </tr>
+      <tr>
+        <td style="text-align: left;"> Số tiền còn nợ </td>
+        <td style="text-align: right;"><strong>{{amountOwed}}</strong></td>
+      </tr>
+    </table>
+  </div>
+  <div class="right">
+    <textarea type="text" disabled [value]="orderDetail ? 'Note: ' + orderDetail.Note : ''"></textarea>
+    <div class="btn-container">
+      <button class="cancel-button" *ngIf="isShowCancel"
+        [swal]="{ title: 'Lý do huỷ đơn hàng: ', input: 'text', showCancelButton: true }"
+        (confirm)="changeOrderStatus($event, 'Đã huỷ')" (dismiss)="handleDismiss($event)">
+        Huỷ
+      </button>
+      <button class="button" *ngIf="isShow" (click)="changeOrderStatus(null, curStatusType)">{{curStatusType}}</button>
+    </div>
+    <p *ngIf="curStatusType == 'Đã huỷ'">
+      <span style="font-weight: bold;">Lý do huỷ đơn hàng:</span> {{orderDetail.Reason}}
+    </p>
+  </div>
 </div>
