--- a/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.css
+++ b/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.css
@@ -84,3 +84,53 @@ label{
   font-weight: bold;
   font-size: medium;
 }
+
+.edit-icon {
+  color: rgb(24, 225, 24);
+  margin-right: 20px;
+}
+
+.delete-icon {
+  color: red;
+}
+
+.pagination-container {
+  width: 70%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagination-container ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+  align-items: center;
+  /* width: 100%; */
+  margin: 0;
+  padding: 0;
+}
+
+.pagination-container li {
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 10px;
+  margin: 0 10px;
+}
+
+.pagination-container p {
+  cursor: pointer;
+  margin: 0;
+}
+
+.pagination-container li:hover {
+  background-color: #E75C6B;
+  color: #fff;
+  transition: ease .5s;
+}
+
+.paginate-active {
+  background-color: #E75C6B;
+  color: #fff;
+}
