--- a/Admin/src/app/customer-management/customer-management.component.css
+++ b/Admin/src/app/customer-management/customer-management.component.css
@@ -215,7 +215,7 @@ th, td {
   height: auto;
   padding: 5px;
 }
-button.close-btn {
+button.close-btn, .reset-btn {
   background-color: #F38A95;
   color: #fff;
   padding: 5px 10px;
@@ -224,7 +224,7 @@ button.close-btn {
   cursor: pointer;
 }
 
-button.close-btn:hover {
+button.close-btn:hover, button.reset-btn:hover {
   background-color: #81C6E8;
 }
 .form-group {
@@ -270,125 +270,12 @@ button.close-btn:hover {
 
 .text-center img{
   width: 200px;
+  height: 200px;
   border-radius: 40%!important;
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* .filter-search-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
 
-.filter-container {
-  display: flex;
-  align-items: center;
-}
-
-.filter-button {
-  background-color: #007bff;
-  color: #fff;
-  padding: 6px 12px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.filter-options-container {
-  margin-left: 10px;
-}
-
-.filter-options {
-  padding: 6px 12px;
-  border: 1px solid #ced4da;
-  border-radius: 4px;
-}
-
-.search-container {
-  margin-left: 10px;
-}
-
-.search-input {
-  padding: 6px 12px;
-  border: 1px solid #ced4da;
-  border-radius: 4px;
-  width: 100%;
-  max-width: 300px;
-}
-.search-container {
-  display: flex;
-}
-
-.search-input {
-  flex: 6;
-}
-
-.filter-options-toggle {
-  flex: 4;
-}
-
-.filter-options-container {
-  display: none;
-}
-.filter-search-container {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 10px;
-}
-
-.filter-container {
-  display: flex;
-  align-items: center;
-  width: 40%;
-}
-
-.filter-button {
-  margin-right: 10px;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  background-color: #008CBA;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.filter-options-container {
-  display: flex;
-  align-items: center;
-  margin-left: 10px;
-  flex-direction: column;
-}
-
-.filter-options {
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-}
-
-.search-container {
-  width: 60%;
-}
-
-.search-input {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-}
-.filter-container {
-  position: relative;
-}
-
-.filter-options-container {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  z-index: 9999;
-} */
 .filter-search-container {
   display: flex;
   align-items: center;
@@ -413,12 +300,12 @@ button.close-btn:hover {
   padding: 10px 40px 10px 40px;
 }
 .filter-options-container {
-  position: absolute;
-  top: 100%;
+  top: 30%;
   left: 0;
-  width: 122%;
+  width: 20%;
   z-index: 9999;
-
+  position: relative;
+  width: 25%;
 }
 .filter-options-container p {
   margin-bottom: 5px;
@@ -448,4 +335,166 @@ button.close-btn:hover {
   top: 50%;
   transform: translateY(-50%);
   color: #f38a95;
+}
+.reset-btn {
+  margin-left: 10px;
+}
+
+.header-box {
+  justify-content: space-between;
+  align-items: center;
+}
+.header-box h1 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #E75C6B;
+}
+.content-box {
+  width: 100%;
+}
+.content-box-title {
+  color: #E75C6B;
+  font-size: 20px;
+  font-weight: bold;
+}
+.line {
+  margin: 10px auto;
+  border-bottom: 1px solid rgb(209, 219, 209);
+  width: 100%;
+}
+.content-box-action {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.content-box-action-container--sort {
+  position: relative;
+  width: 25%;
+}
+
+.content-box-action--sort,
+.content-box-action--search-input {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 15px 10px;
+  border: 1px solid #000;
+}
+
+.content-box-action--sort {
+  position: absolute;
+  width: 100%;
+}
+
+.content-box-action--search {
+  width: 72%;
+  position: relative;
+  height: 60px;
+}
+
+.content-box-action--search-input {
+  width: 100%;
+  position: absolute;
+  outline: none;
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 25px;
+  font-size: 25px;
+}
+
+.content-box-action--sort span {
+  font-weight: bold;
+}
+
+.content-box-action-container--sort ul {
+  position: absolute;
+  top: 64px;
+  border-radius: 25px;
+  left: 0;
+  width: 100%;
+  list-style: none;
+  background-color: #fff;
+  color: #000;
+  padding: 5px 10px;
+  text-align: center;
+  box-shadow: 0 0 6px 1px #000;
+}
+
+.content-box-action-container--sort ul li {
+  margin: 10px 0;
+}
+
+.content-box-action-container--sort ul li:hover {
+  cursor: pointer;
+  background-color: #E75C6B;
+  color: #fff;
+}
+.li-active {
+  background-color: #E75C6B;
+  color: #fff;
+}
+
+.content-box-table {
+  width: 100%;
+  margin-top: 60px;
+  /* height: 500px; */
+  /* overflow-y: scroll; */
+}
+
+.content-box-table table {
+  width: 100%;
+}
+
+.content-box-table .tr-custom {
+  border-bottom: 1px solid rgb(198, 194, 194);
+}
+
+.table-action {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-around;
+}
+.pagination-container {
+  width: 70%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagination-container ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+  align-items: center;
+  /* width: 100%; */
+  margin: 0;
+  padding: 0;
+}
+
+.pagination-container li {
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 10px;
+  margin: 0 10px;
+}
+
+.pagination-container p {
+  cursor: pointer;
+}
+
+.pagination-container li:hover {
+  background-color: #E75C6B;
+  color: #fff;
+  transition: ease .5s;
+}
+
+.paginate-active {
+  background-color: #E75C6B;
+  color: #fff;
 }
