--- a/Client/src/app/my-account/my-address/my-address.component.html
+++ b/Client/src/app/my-account/my-address/my-address.component.html
@@ -15,7 +15,7 @@
           {{address.DetailAddress}}, {{address.Ward}}, {{address.Town}}, {{address.City}}
         </div>
         <div class="col-3">
-          <button class="btn btn-link" (click)="showAddressEdit()">Cập nhật</button> <span style="color:#E75C6B">|</span>
+          <button class="btn btn-link" (click)="showAddressEdit(address._id)">Cập nhật</button> <span style="color:#E75C6B">|</span>
           <button class="btn btn-link" (click)="deleteAddress(address._id)">Xoá</button>
         </div>
       </div>
@@ -88,8 +88,7 @@
 
 <div *ngIf="showEditAddress" class="modal">
   <div class="address-new">
-    <div class="title">Cập nhật địa chỉ</div>
-    <p>Để đặt hàng, vui lòng thêm địa chỉ nhận hàng</p>
+    <div class="title">Cập nhật địa chỉ {{selectedAddress.AddressName}}</div>
     <div class="information">
       <form >
         <div class="form__row form__row1">
@@ -132,7 +131,7 @@
                   Trở lại
               </button>
           </a>
-          <button type="button" class="btn btn-primary input" (click)="putAddress()">
+          <button type="button" class="btn btn-primary input" (click)="putAddress(selectedAddress)">
             Hoàn thành
         </button>
         </div>
